Remove moment usage from admin dashboard template

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -442,7 +442,7 @@ a.nav-card:hover {
 {% block extra_css %}
 <!-- 📱 CSS MOVIL OPTIMIZADO -->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/mobile-admin.css') }}">
-<!-- 🎨 ESTILOS MODERNOS UNIFICADOS - VERSION 2.0 - {{ moment().format('YYYY-MM-DD HH:mm:ss') }} -->
+<!-- 🎨 ESTILOS MODERNOS UNIFICADOS - VERSION 2.0 - Actualizado: 2025-01-04 13:35 -->
 <style>
 /* 🔄 FORZAR RECARGA - CACHE BUSTER */
 /* Version: 2025-01-04-13:35 */
